--- a/backend/wrangler.toml
+++ b/backend/wrangler.toml
@@ -1,6 +1,7 @@
 name = "backend"
 compatibility_date = "2024-09-21"
 compatibility_flags = [ "nodejs_compat" ]
+send_metrics = false
 
 # [vars]
 # MY_VAR = "my-variable"
